2008-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-06
	* webserver/converter: updates (Ulf)
	* gui: OutputModule Editor

2008-04-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-05
	* converter: python beta release
	* add --search option to diff
	* add orderedSequenceIterator() to ConfigurationModifier, to be
	utilized by pythin converters

2008-03-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-04
	* gui: allow users to unlock their own configurations
	* gui: add 'GOTO' command to reference-popups
	* gui: remove databaseIds from configuration tree rendering

2008-03-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-03
	* critical fix regarding the import of paths and sequences!
		
2008-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-22-02
	* improved diff, added streams & datasets
	* bug fix: 'OK' button disabled while editing new directory name
	in tree

2008-03-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-01
	* unlock parser for everybody, add problem dialog
	* fix to InputTag propagation (ModuleInstance)

2008-03-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-00
	* fixes to diff, mostly regarding parameters (+endpath)
	* new stream/dataset schema (-> OfflineConverter!)
	* critical parser fix, regarding nested PSets

2008-03-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-03
	* fixed diff
	* replace migration report with diff dialog
	* ConfDB.reconnect()
	* [V]PSetParameter.setValue()
	

2008-03-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-02
	* fixed '--output' interpretation 

2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-01
	* gui: add DiffDialog

2008-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-21-00
	* parser: serious bug fix!